[package]
name = "org_element"
version = "0.1.0"
authors = ["Ihor Antonov <ngortheone@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"


[dependencies]
cursor = { path = "../cursor",  version = "0.1.0" }
memchr = "2.0"
regex = "1"
lazy_static = "^1.3.0"
strum = "^0.15.0"
strum_macros = "^0.15.0"
